# varkit

./: .Rhistory  .gitignore  pyproject.toml  test.R  test.m  test.sh
data/gk2015/: GK2015_Data.xlsx  GK2015_Data_with_JK_surprises.xlsx  ss_surprises.csv
data/raw/: commodity_price_index.csv  ebp_csv.csv  gdp.csv  macrodata.csv  macrodata_metadata.txt
mains/: build_macro_dataset.py  gk2015_replication.py  llm_surprises_responses.py
mains/replications/: gk2015.py
src/varkit/: auxiliary.py
src/varkit/stats/: moving_statistics.py
src/varkit/utils/: __init__.py  common_sample.py  data_handling.py  data_loaders.py  general.py  macro_dataset.py  var.py
src/varkit/var/: __init__.py  impulse_response.py  matlab_to_python_correspondence.md  model.py  options.py  plotter.py  var_ir.py  var_irband.py  var_model.py  var_options.py
